# COVID-19-Trend-Tracker-West-Africa-Edition

./: README.MD
.github/workflows/: ci.yml
client/: requirements.txt
client/covid-19-trend-tracker/: package-lock.json  package.json
client/covid-19-trend-tracker/public/: index.html  manifest.json
client/covid-19-trend-tracker/src/: App.js
client/covid-19-trend-tracker/src/components/layout/: pagelayout.jsx
client/covid-19-trend-tracker/src/components/ui/: navbar.jsx  togglebar.jsx
client/covid-19-trend-tracker/src/hooks/: use-mobile.jsx  use-toast.jsx
client/covid-19-trend-tracker/src/services/: api.js
client/covid-19-trend-tracker/src/styles/: navBar.css  pageLayout.css
server/: .gitignore  pyproject.toml  requirements.txt
server/apps/: main.py
server/apps/api/: routes.py
server/apps/services/: __init__.py  covid_data_clean.csv  fetcher.py
server/apps/utils/: helper.py
server/tests/: test_fetcher.py  test_helper.py  test_main.py  test_routes.py
