[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "covid19-trend-tracker-west-africa"
version = "0.1.0"
description = "A project to track COVID-19 trends in West Africa."
authors = [
    { name = "merytpeters" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "pandas",
    "pytest"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort"
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
